# tts-generator

./: .gitignore  README.md  pyproject.toml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/phases/01-main-py/: 01-01-PLAN.md  01-02-PLAN.md  01-RESEARCH.md  01-VALIDATION.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
app/: __init__.py  main.py
app/api/routes/: __init__.py  jobs.py
app/core/: __init__.py  config.py  errors.py
app/models/: domain.py  job.py
app/parsers/: markdown_parser.py
app/providers/: __init__.py  base.py  melo_provider.py  openvoice_provider.py
app/schemas/: jobs.py
app/services/: audio_service.py  catalog_service.py  document_factory.py  job_service.py  job_store.py  openvoice_status_service.py  provider_factory.py  storage_service.py  text_preprocessor.py  voice_sample_service.py
app/workers/: __init__.py
scripts/: dev-backend.sh  setup-openvoice.sh
tests/: test_audio_service.py  test_catalog_service.py  test_config.py  test_document_factory.py  test_job_model.py  test_job_service.py  test_markdown_parser.py  test_melo_provider.py  test_openvoice_status_service.py  test_provider_factory.py  test_text_preprocessor.py  test_voice_sample_service.py
web/: package-lock.json  package.json  tailwind.config.ts
web/app/: globals.css  layout.tsx  page.tsx
web/components/tts/: job-status-panel.tsx  markdown-upload-panel.tsx  mode-switch.tsx  output-format-panel.tsx  result-panel.tsx  speaker-settings-panel.tsx  text-input-panel.tsx  (+1 more)
web/lib/: api.ts
(+7 files in other folders)
